--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,8 +63,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/  #Logo 512x512
     - assets/images/logo.png  #Logo 512x512
+    - assets/images/design01.png  #first programming content
+    - assets/images/design02.png  #first programming content
+    - assets/svg/  #first programming content
     - assets/svg/programming.svg  #first programming content
+    - assets/svg/design01.svg  #first programming content
+    - assets/svg/design02.svg  #first programming content
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -78,12 +84,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Righteous-Regular
+      fonts:
+        - asset: assets/fonts/righteous/Righteous-Regular.ttf
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
