--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
     sdk: flutter
   
   flutter_svg: ^1.0.0
+  firebase_core: ^1.10.6
+  firebase_auth: ^3.3.4
+  cloud_firestore: ^3.1.5
+  firebase_storage: ^10.2.4
 
 
   # The following adds the Cupertino Icons font to your application.
