--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,16 @@ dependencies:
   flutter:
     sdk: flutter
   
-  flutter_svg: ^1.0.0
-  firebase_core: ^1.10.6
-  firebase_auth: ^3.3.4
-  cloud_firestore: ^3.1.5
-  firebase_storage: ^10.2.4
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  #cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.2
+  flutter_svg: ^1.0.0
+  firebase_auth: ^3.3.4
+  firebase_core: ^1.10.6
+  cloud_firestore: ^3.1.5
+  firebase_storage: ^10.2.4
+
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +75,7 @@ flutter:
     - assets/svg/programming.svg  #first programming content
     - assets/svg/design01.svg  #first programming content
     - assets/svg/design02.svg  #first programming content
+    - assets/svg/logo.svg  #first programming content
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
