--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -12,8 +12,8 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '2.5.3'
-      - run: flutter pub get
-      - run: flutter test
+      # - run: flutter pub get
+      # - run: flutter test
       - run: flutter build web
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
