--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^1.10.6
   cloud_firestore: ^3.1.5
   firebase_storage: ^10.2.4
+  url_launcher: ^6.0.4
 
 
 dev_dependencies:
