--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cloud_firestore: ^3.1.5
   firebase_storage: ^10.2.4
   url_launcher: ^6.0.4
+  footer: ^0.0.3
+  line_icons: ^2.0.1
 
 
 dev_dependencies:
